# cash

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  main.cpp  pyproject.toml  ruff.toml
.github/workflows/: check.yml
cash/: arguments.py  config.py  data.py  database.py  error_handler.py  exceptions.py  main.py  misc.py  operators.py  parser.py  server.py  services.py  storage.py
cash/adapters/: persistence.py  server.py
cash/core/: arguments.py  data_types.py  database.py  exceptions.py  operators.py  parser.py  storage.py
cash/custom_types/: injectors.py  router.py  validators.py
cash/executor/: executor.py  operators.py  services.py  utils.py
cash/server/: server.py
cash/storage/: schemas.py  storage.py
cash/syntax/: lexer.py  parser.py  schemas.py
cash_cli/: cli.py  client.py
core/: main.py
core/storage/: models.cpp  models.h  storage.cpp  storage.h
core/syntax/: lexer.py  parser.py
libary/: main.py
src/cash/: database.py  exceptions.py  main.py  utils.py
src/cash/executor/: executor.py
src/cash/server/: server.py
src/cash/storage/: schemas.py  storage.py
src/cash/syntax/: lexer.py  parser.py  schemas.py
src/cash/types/: router.py  validators.py
tests/: conftest.py  test_parser.py  test_server.py
