[tool.poetry]
name = "cash"
version = "0.1.0"
description = ""
authors = ["Renat Yakublevich <merlinincorp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
ruff = "^0.6.5"
mypy = "^1.11.2"
orjson = "^3.10.7"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.3"
rich = "^13.9.4"
envparse = "^0.2.0"
pytest-cov = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
